fix image quality

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,12 +48,14 @@ header ul a:hover {
 .profile-pic {
     height: 250px;
     width: 250px;
+    object-fit: cover;
     border-radius: 50px;
     border-style: groove;
     border-color: #66CCCC;
-    margin: -19rem 6rem;
+    margin: -19rem 8rem;
     margin-bottom: 50px;
-    background-image: url("../images/ProfilePic.jpeg");
+    background-image: url("../images/profile-pic.jpg");
+    image-resolution: from-image 300dpi;
     background-size: cover;
     background-position:center;
 }
