--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* defining reused colors */
 :root {
     --aqua: #66CCCC;
     --gray: #3d3d3d;
@@ -15,6 +16,7 @@ body {
     flex-direction: column;
 }
 
+/* header section: handles title and site links */
 header {
     padding: 20px 20px 20px 0;
     background: var(--gray);
@@ -43,11 +45,13 @@ header nav a {
     text-decoration-thickness: 3px;
 }
 
+/* site links will turn white when hovering over them */
 header ul a:hover {
     color: white;
 
 }
 
+/* next 3 sections displays developer name, profile pic and background image */
 #name-tag {
     background-color: var(--aqua);
     position: absolute;
@@ -81,6 +85,7 @@ header ul a:hover {
     background-position: center;
 }
 
+/* main section: contains about me and work sections */
 main {
     display: flex;
     flex-wrap: wrap;
@@ -95,6 +100,7 @@ main h1 {
     margin: 15px 15px 0 70px;
 }
 
+/* about me section */
 .about-me-section {
     display: flex;
 }
@@ -108,6 +114,7 @@ main h1 {
     line-height: 20px;
 }
 
+/* work section - contains 5 work cards that display project images and links */
 .work-section {
     display: flex;
     align-items: start;
@@ -135,6 +142,7 @@ main h1 {
     display: flex;
 }
 
+/* class for the first card to make it bigger than the other 4 */
 .biggest-card {
     flex: 100%;
     outline: solid var(--aqua);
@@ -145,6 +153,7 @@ main h1 {
     display: flex;
 }
 
+/* handles project titles and images */
 .project-header {
     background-color: var(--aqua);
     position: absolute;
@@ -159,6 +168,7 @@ figure img {
     width: fit-content;
 }
 
+/* footer section: contains the contact info section */
 footer {
     color: var(--subBlue);
     display: flex;
@@ -181,6 +191,7 @@ footer h1 {
     margin-left: 10px;
 }
 
+/* contact links */
 .link-element {
     margin: 10px;
     display: inline-block;
@@ -188,7 +199,7 @@ footer h1 {
     text-decoration-thickness: 3px;
 }
 
-
+/* section to handle tablet layout changes */
 @media screen and (max-width: 1023px) {
     header {
         padding: 0;
@@ -264,6 +275,8 @@ footer h1 {
     }
 }
 
+
+/* section to handle mobile layout changes */
 @media screen and (max-width: 600px) {
     .work-card {
         flex: 100%;
@@ -278,6 +291,7 @@ footer h1 {
     }
 }
 
+/* section to handle laptop layout changes */
 @media screen and (min-width: 1023px) {
     main {
         margin-right: 50px;
